refactor(perf): second optimization pass and Javadoc update